2013-09-18  Maciej W. Rozycki  <macro@codesourcery.com>

	* config.h.in (HAVE_MIPS_NAN2008): New macro.
	* elf/elf.h (EF_MIPS_NAN2008): Likewise.
	* sysdeps/generic/ldconfig.h (FLAG_MIPS_LIB32_NAN2008): Likewise.
	(FLAG_MIPS64_LIBN32_NAN2008): Likewise.
	(FLAG_MIPS64_LIBN64_NAN2008): Likewise.
	* elf/cache.c (print_entry): Handle the new cache flags.

2013-09-18  Joseph Myers  <joseph@codesourcery.com>
	    Aldy Hernandez  <aldyh@redhat.com>

	* sysdeps/powerpc/fpu_control.h [_SOFT_FLOAT || __NO_FPRS__]:
	Change condition to [_SOFT_FLOAT].
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_RC_NEAREST): New macro.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_RC_DOWN): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_RC_UP): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_RC_ZERO): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_MASK_ZM): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_MASK_OM): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_MASK_UM): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_MASK_XM): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_MASK_IM): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_RESERVED): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_DEFAULT): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_IEEE): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (fpu_control_t): New typedef.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_GETCW): New macro.
	[__NO_FPRS__ && !_SOFT_FLOAT] (_FPU_SETCW): Likewise.
	[__NO_FPRS__ && !_SOFT_FLOAT] (__fpu_control): New variable
	declaration.

2013-09-18  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/powerpc/powerpc32/__longjmp-common.S (LOAD_GP): Define
	macro conditional on [__SPE__ || (__NO_FPRS__ && !_SOFT_FLOAT)].
	(__longjmp): Use LOAD_GP to load saved GPRs.
	* sysdeps/powerpc/powerpc32/setjmp-common.S (SAVE_GP): Define
	macro conditional on [__SPE__ || (__NO_FPRS__ && !_SOFT_FLOAT)].
	(__sigsetjmp): Use SAVE_GP to save GPRs.

	* sysdeps/powerpc/powerpc32/Makefile [$(with-fp) = no] (+cflags):
	Do not append -msoft-float.